[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chan-py"
version = "0.1.0"
description = "A Python library for Chan (缠论) analysis"
authors = [{name = "Vespa314"}]
license = "MIT"  # 修正为简单字符串
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.23.0"
]

[tool.setuptools]
packages = ["chan_py"]  # 明确指定包名
package-dir = {"" = "."}  # 包目录映射
